# meson-c-template

./: grab_files.py  main.c  meson.build  readme.md  watch.py
entrypoint/: spike.c
test/: calculator_test.c  some_test.c
